--- a/app.json
+++ b/app.json
@@ -1,6 +1,14 @@
 {
   "expo": {
     "name": "TEST01",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ],
     "slug": "TEST01",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -21,7 +29,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.TEST01"
     },
     "web": {
       "favicon": "./assets/favicon.png"
