--- a/package.json
+++ b/package.json
@@ -4,18 +4,54 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/storage": "^20.0.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-file-system": "~16.0.9",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-color": "^2.19.3",
+    "react-native": "0.73.6",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-date-picker": "^5.0.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "~3.29.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation-stack": "^2.10.4",
+    "typescript": "^5.3.0",
+    "undefined": "expo-image-picker\\"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
